Revert "fix: improve performance on Firefox for Android"
This reverts commit f2d3a5d095a8fbb46df20c0e81b81c8483ee6f7c.

--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,7 @@ blockquote {
 
 .post .texts {
     display: block;
+    /*! width: 70%; */
 }
 
 .post .postText {
@@ -136,6 +137,7 @@ blockquote {
 
 .post .postCover {
     width: 30%;
+    /*! display: none; */
 }
 
 .post .postCover .imgParent {
@@ -203,7 +205,10 @@ a {
 @media(orientation: portrait) {
     .post {
         border-radius: 10px;
-        text-shadow: 1px 0 20px white,1px 0 15px white,1px 0 10px white,1px 0 3px white;
+        text-shadow: 1px 0 15px white,1px 0 15px white,1px 0 15px white,1px 0 15px white,1px 0 15px white,1px 0 15px white,1px 0 15px white,1px 0 15px white;
+/*         text-decoration: underline pink solid .9em; */
+        text-underline-offset: -10px;
+        text-decoration-skip-ink: none;
         padding: 0px 15px;
         box-shadow: 5px 5px 10px pink;
         position: relative;
